fixed hover on mobile

--- a/src/components/story-update/intro/index.scss
+++ b/src/components/story-update/intro/index.scss
@@ -32,7 +32,6 @@ body {
 .mas-story {
   // hiding hover behind button on small screens
   @media screen and (max-width: $breakpoint-sm) {
-    padding: 10px 24px 6px;
     font-size: 1.5rem !important;
     line-height: 1.75rem !important;
   }
